# baxter_noetic

./: .gitmodules  README.md  baxter_ip.sh
dependencies/: install_dependencies.sh
src/baxter_launcher/: CMakeLists.txt  package.xml
src/baxter_launcher/launch/: baxter_real.launch  baxter_sim.launch
